fix: visibilidad de papelera y diseño de iconos

--- a/frontend/src/pages/Tareas/TasksPage.scss
+++ b/frontend/src/pages/Tareas/TasksPage.scss
@@ -400,6 +400,7 @@
       }
 
       &.trash {
+        color: rgba(255, 255, 255, 0.4);
 
         &.active,
         &:hover {
